--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -42,7 +42,9 @@ add_subdirectory(gl)
 add_subdirectory(pose)
 add_subdirectory(pose-predict)
 add_subdirectory(pose-and-image)
+add_subdirectory(pose-change-origin)
 add_subdirectory(trajectory)
 add_subdirectory(ar-basic)
 add_subdirectory(pose-apriltag)
 add_subdirectory(tracking-and-depth)
+add_subdirectory(pose-map)
